--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  otp: ^3.1.4
+  sembast: ^3.8.4
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  sqflite: ^2.4.2
+  encrypt: ^5.0.3
+  flutter_secure_storage: ^9.2.4
+  mobile_scanner: ^6.0.6
 
 dev_dependencies:
   flutter_test:
