--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   encrypt: ^5.0.3
   flutter_secure_storage: ^9.2.4
   mobile_scanner: ^6.0.6
+  base32: ^2.1.3
 
 dev_dependencies:
   flutter_test:
