--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   mobile_scanner: ^6.0.6
   base32: ^2.1.3
-
+  shared_preferences: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
