--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   base32: ^2.1.3
   cloud_firestore: ^5.6.6
   shared_preferences: ^2.5.3
+  cryptography: ^2.7.0
+  
 
 dev_dependencies:
   flutter_test:
