--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   shared_preferences: ^2.5.3
   cryptography: ^2.7.0
+  google_fonts: ^6.1.0
   
 
 dev_dependencies:
