--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   shared_preferences: ^2.5.3
   cryptography: ^2.7.0
   google_fonts: ^6.1.0
-  
+  fluttertoast: ^8.2.12
+
 
 dev_dependencies:
   flutter_test:
